// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render selector 1`] = `
<div>
  <div
    class="MuiInput-root MuiInput-underline"
    data-testid="selector-value"
  >
    <div
      class="MuiSelect-root"
    >
      <div
        aria-haspopup="true"
        aria-pressed="false"
        class="MuiSelect-select MuiSelect-selectMenu MuiInput-input"
        role="button"
        tabindex="0"
      >
        test text 1
      </div>
      <input
        id="selector"
        name="test-selector"
        type="hidden"
        value="testKey1"
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSelect-icon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`render selector with empty selector data 1`] = `
<div>
  <span
    class="readonlyTextField "
    data-testid="readonly-text-field"
  >
    Nothing to select
  </span>
</div>
`;

exports[`render selector with readonly 1`] = `
<div>
  <span
    class="readonlyTextField "
    data-testid="readonly-text-field"
  >
    test text 1
  </span>
</div>
`;

exports[`render selector without selected value 1`] = `
<div>
  <div
    class="MuiInput-root MuiInput-underline"
    data-testid="selector-value"
  >
    <div
      class="MuiSelect-root"
    >
      <div
        aria-haspopup="true"
        aria-pressed="false"
        class="MuiSelect-select MuiSelect-selectMenu MuiInput-input"
        role="button"
        tabindex="0"
      >
        Select
      </div>
      <input
        id="selector"
        name="test-selector"
        type="hidden"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSelect-icon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
</div>
`;
